--- a/ratpoison.texi
+++ b/ratpoison.texi
@@ -6,6 +6,13 @@
 @c %**end of header
 
 @ifinfo
+@format
+START-INFO-DIR-ENTRY
+* ratpoison: (ratpoison).                     A rat-free Window Manager.
+END-INFO-DIR-ENTRY
+@end format
+
+@ifinfo
 This is the ratpoison user manual.
 
 Copyright @copyright{} 2000 Shawn Betts
@@ -67,6 +74,8 @@ except that this permission notice may be stated in a
 translation approved by the Free Software Foundation.
 @end titlepage
      
+@end ifinfo
+
 @ifinfo
 This document explains how to use ratpoison.
 @end ifinfo
