*** empty log message ***

--- a/doc/ratpoison.texi
+++ b/doc/ratpoison.texi
@@ -165,6 +165,13 @@ This destroys the current window. Normally you should only need to use
 @kbd{C-t k}, but just incase you need to rip the heart out of a
 misbehaving window this command should do the trick.
 
+@item C-t C-a
+Rename the currently active window. This name will remain for the
+duration of the window's life.
+
+@item C-t C-'
+Go to a window by name.
+
 @end table
 
 @bye
