*** empty log message ***

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,10 @@
 ratpoison NEWS --- history of user-visible changes.  -*- outline -*-
 
+* Changes Singe 0.0.4
+** added --kill and --restart
+These command line options allow the restarting and killing of a
+running ratpoison process.
+
 * Changes Since 0.0.3
 ** Added --enable-debug
 This turns on debugging messages
