changed sabetts's email address

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-Shawn Betts (sabetts@sfu.ca)
+Shawn Betts (sabetts@mail.sourceforge.net)
 
 Shawn is the original author and current maintainer for
 ratpoison. Sickened by the rat and the trend in window managers, he
