--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2000-12-01  shawn  <sabetts@diggin.lamenet.tmp>
+
+	* list.c (find_window_by_name): added check to make sure the
+	window's state is not STATE_UNMAPPED.
+
 2000-11-27  shawn  <sabetts@diggin.lamenet.tmp>
 
 	* events.c (handle_key): Code to generate the prefix event has
