--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,14 @@
+2000-12-03  shawn  <sabetts@diggin.lamenet.tmp>
+
+	* input.h (cook_keycode): added prototype
+
+	* actions.c: key_actions now uses the #define'd keysyms from X11/keysym.h
+
+	* events.c (handle_key): calls cook_keycode() before processing the keysym.
+
+	* input.c (read_key): calls cook_keycode() before returning the keysym
+	(cook_keycode): added.
+
 2000-12-01  shawn  <sabetts@diggin.lamenet.tmp>
 
 	* list.c (find_window_by_name): added check to make sure the
