--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2000-12-15  shawn  <sabetts@badbox.secure.basis.org>
+
+	* actions.c (maximize): increment size in hints->width_inc and hints->height_inc intervals
+
+	* manage.c (manage): set the dimension members of the rp_window struct
+
 2000-12-15  shawn  <sabetts@diggin.lamenet.tmp>
 
 	* manage.c (manage): added ColormapChangeMask and
