--- a/debian/ratpoison.1
+++ b/debian/ratpoison.1
@@ -1,4 +1,4 @@
-.TH RATPOISON 1 "December  4, 2000" "ratpoison 0.0.5" RATPOISON
+.TH RATPOISON 1 "January 29, 2001" "ratpoison 0.0.5" RATPOISON
 .SH NAME
 ratpoison \- fatless X window manager
 .SH SYNOPSIS
@@ -65,6 +65,9 @@ use `C-t k', but just incase you need to rip the heart out of a
 misbehaving window this command should do the trick.
 .TP
 .B C\-t C\-a
+Show current time. Disappears after 5 seconds, like all other info bars.
+.TP
+.B C\-t C\-A
 Rename the currently active window. This name will remain for the
 duration of the window's life.
 .TP
