--- a/NEWS
+++ b/NEWS
@@ -1,22 +1,58 @@
 ratpoison NEWS --- history of user-visible changes.  -*- outline -*-
 
 * Changes Since 0.0.5
-** Colormap support
-ratpoison now maintains colormaps
+** Improved shell command
+The 'exec' command now calls execl ("/bin/sh", "sh", "-c", cmd, 0)
+where cmd is your shell command.  In short, you can now make shell
+command calls with parameters.
 
-** XSizeHints honoured
-Windows may not maximize fully now since they use XSizeHints to figure
-out how big the window can be.
+The default keybinding has been changed from C-: to C-! for the 'exec'
+command.
+
+** Command line
+An emulation of screen's colon command has been implemented.  This
+allows you to make wm commands by name.  The current command set
+includes: abort, next, prev, exec, number, select, colon, kill,
+delete, other, windows, title, clock, maximize, newwm, and version.
+To bring up a command line prompt, type C-:.  See the info or man page
+for details on the command set and its usage.
 
 ** Keysym reading updates
 keystrokes are now handled far better. Shifted keystrokes work. More
 uniform key event processing.
 
-** New keystroke C-t space
-Does the same as C-t C-n (next window)
+You can no longer "over modify" keys.  Previously, if C-tn was bound
+to 'next', you could type C-tC-n and get the same result.  No longer.
+You need to explicity map both C-tn and C-tC-n if you want both to
+work.
+
+** XSizeHints honoured
+Windows may not maximize fully now since they use XSizeHints to figure
+out how big the window can be.
+
+** Bold color removed
+ratpoison now uses only foreground and background colors.  They
+default to black and white, respectively.  To represent the current
+window in the bar, the current window's text is reversed.
+
+** Colormap support
+ratpoison now maintains colormaps
+
+** New keystrokes
+*** C-t space and C-t enter
+Do the same as C-tn (next window)
+*** C-tA
+Shows a the time in the display bar
+*** C-tv
+Shows the version of ratpoison
 
 ** Messages in the window bar
 ratpoison now outputs user error messages.
+
+** Stability
+Some fixed length buffer sizes in window names that resulted in
+curious segfaults have been fixed.
+
 
 * Changes Singe 0.0.4
 ** added --kill and --restart
