--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2001-02-17  Gergely Nagy  <8@free.bsd.hu>
+
+	* man/ratpoison.1,
+	* doc/ratpoison.texi: removed reference to :center
+	and :resize
+
 2001-02-15  Gergely Nagy  <8@free.bsd.hu>
 
 	* autogen.sh: added autoheader call
